--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: grey;
 }
 
+h1 { color: brown;
+}, 
+h1 { display: none;}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
