--- a/src/components/CartWidget/CartWidget.css
+++ b/src/components/CartWidget/CartWidget.css
@@ -11,7 +11,7 @@
     margin-left: 8px;
     border-color: black;
     border-style: solid;
-    background-color: #F0F0F0;
+    background-color: #f4f5db;
 }
 
 .marginCarrito {
